# demoses_grid_tariffs

./: .copier-answers.yml  .gitignore  CITATION.cff  LICENSE  README.dev.md  README.md  project_setup.md  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: next_steps.yml  next_steps_citation_issue.md  next_steps_online_documentation_issue.md  next_steps_sonarcloud_issue.md
configs/: default.yaml
docs/: Makefile  conf.py  index.rst  make.bat
src/demoses_grid_tariffs/: __init__.py  data_processing.py  dhn_model.py  dhn_plots.py  generate_tariffs.py  helper_functions.py  my_module.py  plot_dhn_results.py  prepare_dhn_input.py  run_dhn_model.py
tests/: test_my_module.py
