# see documentation, e.g.
# - https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
# - https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
# - https://www.python.org/dev/peps/pep-0621/

[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
authors = [
    { name = "Christian Doh Dinga", email = "c.dohdinga@tudelft.nl" }
]

dynamic = ["dependencies"]

description = "Code to investigate the impacts of grid tariffs on prosumer flexibility and grid loading"
keywords = ["Grid tariffs"," Flexibility"," Electrification"," Grid congestion"]
license = {file = "LICENSE"}
name = "demoses_grid_tariffs"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
version = "0.1.0"

[project.optional-dependencies]
dev = [
    "bump-my-version",
    "coverage [toml]",
    "pytest",
    "pytest-cov",
    "ruff",
]

[project.urls]
Repository = "https://github.com/ChristianDDinga/demoses_grid_tariffs"
Issues = "https://github.com/ChristianDDinga/demoses_grid_tariffs/issues"
ReadTheDocs = "https://demoses_grid_tariffs.readthedocs.io"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p pytest_mock"

[tool.coverage.run]
branch = true
source = ["src/demoses_grid_tariffs"]
command_line = "-m pytest"

[tool.ruff]
line-length = 120
output-format = "concise"
extend-exclude = ["docs"]

[tool.ruff.lint]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Enable Pyflakes `E` and `F` codes by default.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    ".venv",
    "scripts",
]

ignore = [
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN204", # Missing return type annotation for special (dunder) method
    "FBT",    # Using boolean function arguments
    "TD",     # TODOs
    "FIX001", # Resolve FIXMEs
    "FIX002", # Resolve TODOs
    "B028",   # No explicit `stacklevel` keyword argument found in warning
    # No docstrings required in the following cases
    "D100", # Missing module docstring
    "D104", # Missing public package docstring
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    'D100',  # Missing module docstring
    'D107',  # Missing docstring in `__init__`
    'D101',  # Missing public class docstring
    'D102',  # Missing docstring in public method
    'D104',  # Missing public package docstring
    # The following list excludes rules irrelevant to the Google style
    'D203',
    'D204',
    'D213',
    'D215',
    'D400',
    'D401',
    'D404',
    'D406',
    'D407',
    'D408',
    'D409',
    'D413',
    'PD011', # Use `.to_numpy()` instead of `.values`
    'PLR0913', # Too many arguments in function definition (7 > 5)
    'T201', # print found
    'E712', # Ignore "Avoid equality comparisons to `True`; use `if df_to_plot["is_representative"]:` for trut"
    'FA102',
    'G004',
    'TRY003',
    'TRY400',
    'EM102',
    'PTH123',
    'UP015',
    'BLE001',
    'C901',
    'PLR0912',
    'PLR0915',
    'EM101',
    'SIM118',
    'B904',
    'PD003',
    'PERF203',
    'SIM108',
    'PLR2004',
    'ERA001',
    'RUF015',
    'COM812',
    'N803',
    'RET504',
    'N816',
    'Q000',
    'RUF005',
    'RUF013',
    'N806',
    'PD002',
    'PD008',
    'C408',
    'C414',
    'C416',
    'RUF059',
    'SLF001',
    'ICN001',
]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Tests can ignore a few extra rules
"tests/**.py" = [
    "ANN201", # Missing return type annotation for public function
    "PT011",  # Missing `match` parameter in `pytest.raises()`
    "S101",   # Use of assert is detected
]

[tool.ruff.lint.isort]
known-first-party = ["demoses_grid_tariffs"]
no-lines-before = ["future", "local-folder"]

[tool.bumpversion]
current_version = "0.1.0"

[[tool.bumpversion.files]]
filename = "src/demoses_grid_tariffs/__init__.py"

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CITATION.cff"
